3rd session from master

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         <h1>okay master ur turn</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam tempora eligendi ullam, quisquam at ipsa veritatis libero molestias porro. In non consequuntur vero iure quis, nam a assumenda, doloribus corporis voluptate reiciendis odit? Dicta atque, quis iste laboriosam fuga autem quia odio! Natus voluptates expedita inventore molestiae in doloribus dolorem!</p>
     </div>
+    <div class="section3">
+        <h1>okay elijah ur turn</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam tempora eligendi ullam, quisquam at ipsa veritatis libero molestias porro. In non consequuntur vero iure quis, nam a assumenda, doloribus corporis voluptate reiciendis odit? Dicta atque, quis iste laboriosam fuga autem quia odio! Natus voluptates expedita inventore molestiae in doloribus dolorem!</p>
+    </div>
 </body>
 </html>
