--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     <div class="section5">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos optio, fugit praesentium maiores id accusamus corporis error. Unde consectetur sequi vitae? Asperiores praesentium eos assumenda non nobis aspernatur vel voluptas corrupti, expedita pariatur. Fugit et iure, quaerat aliquam ad commodi rem, doloremque impedit ea ex nostrum provident repudiandae ab possimus!
     </div>
+    <div class="section6">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos optio, fugit praesentium maiores id accusamus corporis error. Unde consectetur sequi vitae? Asperiores praesentium eos assumenda non nobis aspernatur vel voluptas corrupti, expedita pariatur. Fugit et iure, quaerat aliquam ad commodi rem, doloremque impedit ea ex nostrum provident repudiandae ab possimus!
+    </div>
 </body>
 </html>
